test/supertelo_mobile/css/main.css
/* ... */
/* clearfix */
.clearfix:after {
	visibility: hidden;
	display: block;
	font-size: 0;
	content: " ";
	clear: both;
	height: 0;
	}
* html .clearfix             { zoom: 1; } /* IE6 */
*:first-child+html .clearfix { zoom: 1; } /* IE7 */



/* M E N U */
.navbar {
	box-shadow: none!important;
}

#nav {

}

.nav-cover {
	background: rgba(0, 0, 0, .85) !important;

	-webkit-box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, .75);
	-moz-box-shadow:    0px 2px 0px 0px rgba(0, 0, 0, .75);
	box-shadow:         0px 2px 0px 0px rgba(0, 0, 0, .75);
}

.navbar-default {
	background: none!important;
	border: none!important;
}
.navbar-default {
	background: none!important;
}

.navbar-fixed-top {
	background: none!important;
}

.navbar-default .navbar-brand {
	color: #777777;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
	color: #5e5e5e;
	background-color: transparent;
}
.navbar-default .navbar-text {
	color: #777777;
}

.navbar-default .navbar-nav > li {

}

.navbar-default .navbar-nav > li > a {
	padding: 10px 30px;
	margin: 0 28px;
	font: 21px 'gagalinregular', sans-serif;
	line-height: 26px;
	color: #efc330;
	text-align: center;
	text-transform: uppercase;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
	color: #f6ee14;
	background: transparent;
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
	color: #f6ee14;
	background: rgba(246, 238, 20, .1);
}

.navbar-default .navbar-nav > .disabled > a,
.navbar-default .navbar-nav > .disabled > a:hover,
.navbar-default .navbar-nav > .disabled > a:focus {
	color: #cccccc;
	background-color: transparent;
}
.navbar-default .navbar-toggle {
	padding-top: 5px;
	padding-bottom: 5px;
	padding: 0;
	border-color: transparent!important;
	background: none;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
	border-color: transparent!important;
	background: none;
}
.navbar-default .navbar-toggle .icon-bar {
	display: block;
	width: 26px;
	height: 2px;
	border-radius: 1px;
	background-color: rgba(246,238,20,.75);
}
.navbar-toggle .icon-bar + .icon-bar {
	margin-top: 6px;
}
.navbar-default .navbar-toggle:hover .icon-bar,
.navbar-default .navbar-toggle:focus .icon-bar {
	background-color: rgba(246,238,20,.90);
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
	border-color: #f6ee14;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
	border-color: rgba(255, 255, 255, .35);
	color: #efc330;
}



.header-line {
	display: block;
	margin: 0 auto;
	height: 45px;
	width: 100%;
	background: #000;
}

.cover-trainers {
	min-height: 2010px;
	background: #8B6E66 url(../img/bg-trainers.jpg) center top no-repeat;
	overflow: hidden;
}



/* denis */
.denis {
	width: 100%;
	min-height: 910px;
}

.expert-top {
	position: relative;
	display: block;
	margin: 0 auto 70px;
	width: 100%;
}

img.semenihin,
img.turchinskaya,
img.lindover {
	display: block;
	margin: 35px auto 0;
}

p.denis-text-1 {
	display: block;
	margin: 110px 0 0 20px;
	padding: 25px 5px;
	width: 590px;
	font: 115px 'rusboycottregular';
	line-height: 120px;
	color: #003333;
	background: #ffea00;
	-webkit-transform: rotate(-2deg);
	-moz-transform: rotate(-2deg);
	-ms-transform: rotate(-2deg);
	-o-transform: rotate(-2deg);
}

	p.denis-text-1 span {
		display: block;
		-webkit-transform: rotate(2deg);
		-moz-transform: rotate(2deg);
		-ms-transform: rotate(2deg);
		-o-transform: rotate(2deg);
	}

p.denis-text-2 {
	display: block;
	margin: -5px 0 0 80px;
	padding: 15px 30px;
	width: 485px;
	font: 36px 'gagalinregular';
	line-height: 36px;
	color: #003333;
	background: #ffea00;
}

p.denis-text-3 {
	display: block;
	margin: -5px 0 0 80px;
	padding: 0 30px 20px;
	width: 485px;
	font: 600 18px 'Open Sans';
	line-height: 21px;
	color: #003333;
	background: #ffea00;
}

p.denis-text-4 {
	display: block;
	margin: 0 0 0 45px;
	padding: 15px 60px;
	width: 540px;
	font: 60px 'gagalinregular';
	line-height: 60px;
	color: #003333;
	background: #ffea00;
	-webkit-transform: rotate(3deg);
	-moz-transform: rotate(3deg);
	-ms-transform: rotate(3deg);
	-o-transform: rotate(3deg);
}

	p.denis-text-4 span {
		display: block;
		-webkit-transform: rotate(-3deg);
		-moz-transform: rotate(-3deg);
		-ms-transform: rotate(-3deg);
		-o-transform: rotate(-3deg);
	}

	p.denis-text-4 em {
		font: normal 40px 'gagalinregular';
		line-height: 40px;
	}

p.denis-text-5 {
	float: left;
	display: block;
	padding: 32px 15px;
	margin-top: 60px;
	width: 413px;
	height: 94px;
	font: 800 24px 'Open Sans';
	line-height: 30px;
	color: #330000;
	text-align: center;
	text-transform: uppercase;
	background: url(../img/denis-text-bg.png) center center no-repeat;

	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}



p.denis-text-6 {
	margin-top: 10px;
	font: 800 22px 'Open Sans';
	line-height: 22px;
	text-decoration: none;
	color: #003333;
	letter-spacing: .5px;
	text-align: center;
}

	p.denis-text-6 span {
		font: 800 30px 'Open Sans';
		line-height: 30px;
		text-decoration: underline;
	}

a.btn-denis {
	display: block;
	margin: 15px auto 25px;
	width: 255px;
	height: 62px;
	font: 800 24px 'Open Sans';
	line-height: 62px;
	text-align: center;
	text-decoration: none;
	letter-spacing: .3px;
	color: #fff;
	background: #ff9a02;
	outline: none;
	border: none;
	overflow: hidden;
	transition: 0.1s;

	-webkit-border-radius: 31px;
	-moz-border-radius: 31px;
	border-radius: 31px;
}

	a.btn-denis::-moz-focus-inner{border:0}
/* ... */

